--- a/package.json
+++ b/package.json
@@ -18,7 +18,21 @@
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "@mapbox/babel-plugin-transform-jsxtreme-markdown": "^0.5.3",
+    "autoprefixer": "^9.6.1",
+    "babel-preset-gatsby": "^0.2.13",
+    "gatsby-image": "^2.2.19",
+    "gatsby-plugin-postcss": "^2.1.7",
+    "gatsby-plugin-react-helmet": "^3.1.7",
+    "gatsby-plugin-sharp": "^2.2.22",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-source-filesystem": "^2.1.22",
+    "gatsby-transformer-remark": "^2.6.22",
+    "gatsby-transformer-sharp": "^2.2.14",
+    "prettier": "^1.18.2",
+    "react-google-maps": "^9.4.5",
+    "react-helmet": "^5.2.1",
+    "tailwindcss": "^1.1.2"
   },
   "repository": {
     "type": "git",
