--- a/package.json
+++ b/package.json
@@ -1,44 +1,22 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "voyalguateque.com",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
+    "deploy": "yarn build && surge public/"
   },
   "dependencies": {
-    "gatsby": "^2.15.15",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
-  },
-  "devDependencies": {
-    "@mapbox/babel-plugin-transform-jsxtreme-markdown": "^0.5.3",
     "autoprefixer": "^9.6.1",
-    "babel-preset-gatsby": "^0.2.13",
-    "gatsby-image": "^2.2.19",
+    "gatsby": "^2.15.15",
     "gatsby-plugin-postcss": "^2.1.7",
-    "gatsby-plugin-react-helmet": "^3.1.7",
-    "gatsby-plugin-sharp": "^2.2.22",
-    "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^2.1.22",
-    "gatsby-transformer-remark": "^2.6.22",
-    "gatsby-transformer-sharp": "^2.2.14",
-    "prettier": "^1.18.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-google-maps": "^9.4.5",
-    "react-helmet": "^5.2.1",
+    "surge": "^0.21.3",
     "tailwindcss": "^1.1.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
